@@ -10,6 +10,8 @@ Version 5.2.2 -
 - Fixed guid type so that a null value is still returned as guid type (bug #35041)
 - Added support for using the new PARAMETERS I_S view when running against
   a 6.0 server    
+- Fixed bug with the membership provider where the min non alpha numeric option
+  was not working correctly.    
     
 Version 5.2.1 - 2/27/2008
 - Tons of fixes in providers.  The actually work now.  :)
